--- a/index.html
+++ b/index.html
@@ -6,19 +6,39 @@
 </head>
 <body>
   <script>
-    function computerPlay() {                             //Define a function which returns a random value between Rock, Paper and Scissors
-      const computerValue = Math.floor(Math.random()*3);  //Get one of three values (0, 1 or 2) and return it to computerValue
-      if (computerValue === 0) {                          //If the value of computerValue is 0, a new constant computerMove is created and gets the "Rock" value, and it is then returned...
+    function computerPlay() {                                                          //Define a function which returns a random value between Rock, Paper and Scissors
+      const computerValue = Math.floor(Math.random()*3);                              //Get one of three values (0, 1 or 2) and return it to computerValue
+      if (computerValue === 0) {                                                      //If the value of computerValue is 0, a new constant computerMove is created and gets the "Rock" value, and it is then returned...
         const computerMove = "Rock";
         return computerMove;
       }
-      else if (computerValue === 1) {                     //... else if the value of computerValue is 1, a new constant computerMove is created and gets the "Paper" value, and it is then returned
+      else if (computerValue === 1) {                                                 //... else if the value of computerValue is 1, a new constant computerMove is created and gets the "Paper" value, and it is then returned
         const computerMove = "Paper";
         return computerMove;
       }
-      else if (computerValue === 2) {                     //... else if the value of computerValue is 2, a new constant computerMove is created and gets the "Scissors" value, and it is then returned
+      else if (computerValue === 2) {                                                 //... else if the value of computerValue is 2, a new constant computerMove is created and gets the "Scissors" value, and it is then returned
         const computerMove = "Scissors";
         return computerMove;
+      }
+    }
+
+    function singleRound(playerSelection, computerSelection) {                        //Define a function which plays a single round. It compares both arguments and output a winner based on the result
+      playerSelection = playerSelection.toLowerCase();                                //Put the player input in lower case so that it can then have its first letter be capitalized
+      playerSelection = playerSelection[0].toUpperCase() + playerSelection.slice(1);  //Concatenate the first letter capitalized (REMEMBER its index is 0!) and the rest of the string
+      if (playerSelection === "Rock" && computerSelection === "Paper") {
+        return lose = "You lose! Paper beats Rock.";
+      } else if (playerSelection === "Rock" && computerSelection === "Scissors") {
+          return win = "You win! Rock beats Scissors.";
+      } else if (playerSelection === "Paper" && computerSelection === "Rock") {
+          return win = "You win! Paper beats Rock.";
+      } else if (playerSelection === "Paper" && computerSelection === "Scissors") {
+          return lose = "You lose! Scissors beat Paper.";
+      } else if (playerSelection === "Scissors" && computerSelection === "Rock") {
+          return lose = "You lose! Rock beats Scissors.";
+      } else if (playerSelection === "Scissors" && computerSelection === "Paper") {
+          return win = "You win! Scissors beat Paper.";
+      } else if (playerSelection === computerSelection) {
+          return tie = "It's a tie!";
       }
     }
 
