Add the initializer line 53, I think.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     }
 
     function game() {
-      let i = 0;
+      let i = 0;                                                                          //These values get incremented during the course of the code, so they can't be const
       let winTally = 0;
       let loseTally = 0;
       let tieTally = 0;
