Turn the script into a module to protect 'golbal' variables.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </body>
 
-<script>
+<script type="module">
     
   document.getElementById("rock").addEventListener("click", () => {                 //These Event Listeners call several functions in one click event.
     singleRound("Rock", computerPlay());
